# eiporion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
eiporion/: __init__.py  bitLinear.py  eiporionkernels.py  eiporionoptim.py
